--- a/Resources/Private/Translations/de/NodeTypes/Content/CookieGroup.xlf
+++ b/Resources/Private/Translations/de/NodeTypes/Content/CookieGroup.xlf
@@ -6,6 +6,9 @@
 				<source>Cookie Group</source>
 				<target state="final">Cookie-Gruppe</target>
 			</trans-unit>
+            <trans-unit id="groups.cookie">
+                <target state="final">Cookie-Gruppe</target>
+            </trans-unit>
 			<trans-unit id="ui.inspector.groups.cookie.label" xml:space="preserve">
 				<source>Cookie Group</source>
 				<target state="final">Cookie-Gruppe</target>
