--- a/Resources/Private/Translations/en/NodeTypes/Content/CookieGroup.xlf
+++ b/Resources/Private/Translations/en/NodeTypes/Content/CookieGroup.xlf
@@ -5,6 +5,9 @@
 			<trans-unit id="ui.label" xml:space="preserve">
 				<source>Cookie Group</source>
 			</trans-unit>
+            <trans-unit id="groups.cookie">
+                <target state="final">Cookie group</target>
+            </trans-unit>
 			<trans-unit id="ui.inspector.groups.cookie.label" xml:space="preserve">
 				<source>Cookie Group</source>
 			</trans-unit>
